Change favicon suffix to ico
Experiment on linking different favicon file types

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
   <title>YunwenTu(Tutu) Design Explorer</title>
-  <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
+  <link href="img/icons/favicon-32x32.ico" rel="shortcut icon">
   <!-- may change the favicon design later -->
 </head>
 
