Add github link in footer

--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
           <li><a href="https://www.linkedin.com/in/tuyunwen/" target="_blank"><img src="img/icons/linkedin.png" alt="LinkedIn icon" width="32"></a></li>
           <li><a href="https://www.instagram.com/tutu.fooddesign/?hl=en" target="_blank"><img src="img/icons/instagram.png" alt="Instagram icon" width="32"></a></li>
           <li><a href="https://medium.com/@yunwentu22" target="_blank"><img src="img/icons/medium.png" alt="Medium icon" width="32"></a></li>
+          <li><a href="https://github.com/tutuseagull" target="_blank"><img src="img/icons/github.png" alt="GitHub icon" width="32"></a></li>
         </ul>
       </div>
 
