--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
-  <title>About Tutu - Experiences and Skills</title>
+  <title>About - Skills and Experiences</title>
   <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
 </head>
 
@@ -74,9 +74,9 @@
               <h3>UX Design</h3>
               <ul>
                 <li>User interview/research/synthesis</li>
-                <li>Sketch/wireframe/hi-fi prototype/test</li>
-                <li>SketchApp/Invision/Figma</li>
-                <li>Html</li>
+                <li>Sketch/wireframe/hi-fi prototype</li>
+                <li>Sketch App/Invision/Figma</li>
+                <li>User test</li>
               </ul>
             </div>
 
