Change about page title

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
-  <title>About - Skills and Experiences</title>
+  <title>About Tutu - Skills and Experiences</title>
   <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
 </head>
 
