Update copy in skill section

--- a/about.html
+++ b/about.html
@@ -71,12 +71,12 @@
 
             <div>
               <img src="img/icons/uxdesign.png" alt="ux design icon" width="32">
-              <h3>UX Design</h3>
+              <h3>UX/UI Design</h3>
               <ul>
-                <li>User interview/research/synthesis</li>
-                <li>Sketch/wireframe/hi-fi prototype</li>
+                <li>User research/synthesis/test</li>
+                <li>Lo-fi & hi-fi prototype/design system</li>
                 <li>Sketch App/Invision/Figma</li>
-                <li>User test</li>
+                <li>HTML</li>
               </ul>
             </div>
 
