--- a/project-1.html
+++ b/project-1.html
@@ -6,7 +6,7 @@
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
-  <title>YunwenTu(Tutu) Design Explorer</title>
+  <title>Launch a new investment product</title>
   <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
   <!-- may change the favicon design later -->
 </head>
