Add heading and hero pic

--- a/project-1.html
+++ b/project-1.html
@@ -30,7 +30,18 @@
 
   <main id="top">
 
+<div>
+  <picture>
+    <source srcset="img/roofs/rs-1-600x400.png" media="(max-width:767px)">
+    <img src="img/roofs/rs-1.png" alt="new-investment-product">
+  </picture>
+</div>
 
+  <div>
+    <div>
+    <h1>Launch a New Investment Product</h1>
+</div>
+</div>
 
 
   </main>
