Add project overview

--- a/project-1.html
+++ b/project-1.html
@@ -30,19 +30,59 @@
 
   <main id="top">
 
-<div>
-  <picture>
-    <source srcset="img/roofs/rs-1-600x400.png" media="(max-width:767px)">
-    <img src="img/roofs/rs-1.png" alt="new-investment-product">
-  </picture>
-</div>
-
-  <div>
     <div>
-    <h1>Launch a New Investment Product</h1>
-</div>
-</div>
+      <picture>
+        <source srcset="img/roofs/rs-1-600x400.png" media="(max-width:767px)">
+        <img src="img/roofs/rs-1.png" alt="new-investment-product">
+      </picture>
+    </div>
 
+    <div>
+      <div>
+        <h1>Launch a New Investment Product</h1>
+      </div>
+    </div>
+
+    <div>
+      <div>
+
+        <div>
+          <h2>Overview</h2>
+        </div>
+
+        <div>
+          <section>
+            <ul>
+              <li> Design Duration: 3.5 months (2018)</li>
+              <li> Client Industry: Proptech, Fintech</li>
+              <li> User: Accredited Investors</li>
+              <li> Role: Product designer in Web UX and UI design (* Collaborated with a team in user research and another designer in the web design process)</li>
+              <li> Services: User research, responsive web design, UX testing, marketing assets & document design </li>
+            </ul>
+          </section>
+
+          <section>
+            <div>
+              <h3>Purpose</h3>
+              <p>Design and launch a new real estate investment service, and build a website to support that.</p>
+            </div>
+
+            <div>
+              <h3>Approach</h3>
+              <ul>
+                <li>Study & Learn about the investment behaviors of our potential user</li>
+                <li>Explain a relatively new and complex investment model to the users visually and verbally</li>
+                <li>Provide Visual and Verbal Explanation towards new & complex investment model for users</li>
+                <li>Validate business models</li>
+                <li>Build trust between the investors and the platform through a responsive website</li>
+                <li>Work with existing brand DNA and create a new style guide for the targeted visitors</li>
+              </ul>
+          </section>
+
+        </div>
+
+      </div>
+    </div>
 
   </main>
 
