Change overview from list to paragraph

--- a/project-1.html
+++ b/project-1.html
@@ -52,13 +52,25 @@
 
         <div>
           <section>
-            <ul>
-              <li> Design Duration: 3.5 months (2018)</li>
-              <li> Client Industry: Proptech, Fintech</li>
-              <li> User: Accredited Investors</li>
-              <li> Role: Product designer in Web UX and UI design (* Collaborated with a team in user research and another designer in the web design process)</li>
-              <li> Services: User research, responsive web design, UX testing, marketing assets & document design </li>
-            </ul>
+            <div>
+              Design Duration: 3.5 months (2018)
+            </div>
+            <div>
+              <h3>Client Industry</h3>
+              <p>Proptech, Fintech</p>
+            </div>
+            <div>
+              <h3>User</h3>
+              <p>Accredited Investors</p>
+            </div>
+            <div>
+              <h3>Role</h3>
+              <p>Product designer (* Collaborated with a team in user research and another designer in the web design process)</p>
+            </div>
+            <div>
+              <h3>Services</h3>
+              <p>User research, responsive web design, UX testing, marketing assets & document design </p>
+            </div>
           </section>
 
           <section>
