Add contents in project detail

--- a/project-1.html
+++ b/project-1.html
@@ -32,8 +32,8 @@
 
     <div>
       <picture>
-        <source srcset="img/roofs/rs-1-600x400.png" media="(max-width:767px)">
-        <img src="img/roofs/rs-1.png" alt="new-investment-product">
+        <source srcset="img/roofs/rs-1@1.png" media="(max-width:767px)">
+        <img src="img/roofs/rs-1@2.png" alt="new-investment-product">
       </picture>
     </div>
 
@@ -44,6 +44,7 @@
     </div>
 
     <div>
+      <!-- overview starts -->
       <div>
 
         <div>
@@ -82,7 +83,134 @@
         </div>
 
       </div>
-    </div>
+    </div> <!-- overview ends -->
+
+    <div>
+      <!-- project detail starts -->
+      <div>
+        <h2> The Moments</h2>
+
+        <section>
+          <h3>Engaging and building trust with users </h3>
+          <p>Within a 3-month timeframe, I and another designer together constructed a website with the product and marketing team. During the first month, I have worked closely with the product team on user research, competitor research, business
+            model validation, and end-to-end experience. After the research phase, a copywriter joined and we were able to fast-paced the development of contents, architecture, a new style guide, and the final website design and iterations. </p>
+        </section>
+
+        <section>
+          <h3>The starting point and the aims were</h3>
+          <ul>
+            <li>Launching an online real estate investment service which takes care of all the rental management efforts, so that the investor can invest in remote properties with less work.</li>
+            <li>Targeting a more specific group of users, the accredited investor</li>
+            <li>Creating a new website, which would be the main touchpoint leading deal closure or further contact with the sales team. The measurements of success were selling out all the listing properties, and having 500+ signups on the waitlist.
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Design Principle: Credibility > Simplicity</h3>
+          <p>When working for clients in many industries, the common goal is to create an intuitive and simple experience for the vast majority of users. However, one important experience I have learned from this project is, in some industries, such
+            as financial and healthcare, a “smooth UX flow” is usually prioritized instead of “Credibility” during decision-making. </p>
+          <p>In this case, we had to communicate information accurately and clearly to build trust, and lead to closing deals. Additionally, we wanted the visitors to feel exclusive to the offerings. </p>
+        </section>
+
+        <section>
+          <!-- Q!!! I started to feel confused if I should add more <div> here -->
+          <h3>Discovery Interviews</h3>
+          <p>Since the targeted users are accredited investors, I conducted some interviews with investors who had the same qualifications as the accredited investors, previous customers from the client company, and registered investment advisors
+            (RIA). </p>
+
+          <picture>
+            <source srcset="img/roofs/rs-uservalue@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-uservalue@2.png" alt="user value">
+          </picture>
+          <p>(3 key values that got the users excited)</p>
+        </section>
+
+        <section>
+          <h4>Key learnings that guided the design decisions: </h4>
+          <ol>
+            <li>They liked the concept of a hassle-free investment process for saving their time and energy. </li>
+            <li>Investors asked a lot of questions before diving into the listing. This pushed us to develop the CTA “Browse Properties” a few steps later in the user journey; and we also decided to make the website more informative. </li>
+            <li>Potential buyers are often experts in investment but not necessarily in real estate, so they rely on us to provide more context. </li>
+            <li>Investors tend to be more excited when looking at the comparison of investment models with specific numeric data. </li>
+            <li>Transparency to all the costs was always appreciated.</li>
+          </ol>
+          <p>In addition, we made a decision on the investment model and finalized the end-to-end user journey after listening to the interview feedback on different options. </p>
+
+          <picture>
+            <source srcset="img/roofs/rs-journey@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-journey@2.png" alt="user journey map">
+          </picture>
+        </section>
+
+        <section>
+          <h3>Information Architecture and Design Messaging</h3>
+          <p>With the help of a copywriter and lessons learned from interviews & some wireframe testing, we were able to finalize the content strategy for the website in time. Once the strategy was developed, the next challenge was to make our
+            website informative, supported by reliable data sources, and efficient enough to engage with the investors.</p>
+
+          <picture>
+            <source srcset="img/roofs/rs-ia@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-ia@2.png" alt="information architecture">
+          </picture>
+
+          <p>At the same time, more marketing messages were brought to the table as part of the design decision: </p>
+          <ul>
+            <li>The first group of investors was exclusively invited. </li>
+            <li>The service was powered by AI to generate predictive data analysis. </li>
+            <li>A huge amount of information will be broken down into different levels in the website architecture for investors.</li>
+            <li>We wanted to introduce a new and sophisticated look and feel on the website, meanwhile, inherited some DNA from the existing brand guideline. </li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Iterating the Contents</h3>
+          <p>Once the goals and website architecture were clear, it then allowed us to focus on the brand messaging and details. </p>
+
+          <picture>
+            <source srcset="img/roofs/rs-messaging@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-messaging@2.png" alt="design messaging">
+          </picture>
+          <p>(Testing messaging on the homepage)</p>
+        </section>
+
+        <section>
+          <h3>Iterating the VI and Design System</h3>
+          <p>Based on our persona and interview insights, I did some thorough research on the visual language of premium services/products and their everyday go-to website, from luxurious airlines, investment platforms, to Financial TImes and etc.
+            This really helped us to analyze which color palettes and typography is considered more SOPHISTICATED, PREMIUM, and HI-TECH. </p>
+
+          <picture>
+            <source srcset="img/roofs/rs-visualexplore@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-visualexplore@2.png" alt="Visual explorations">
+          </picture>
+
+          <p>Then we did quick mockups with different looks and themes and selected the design direction among the team. </p>
+          <p>We decided to keep the signature orange from the original company brand, but apply a darker navy theme with “One Serif Font.” </p>
+
+          <picture>
+            <source srcset="img/roofs/rs-styleguide@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-styleguide@2.png" alt="Style guide">
+          </picture>
+
+          <p>In addition, we have also explored how to visually translate value propositions and marketing messages through many iterations. One example would be how the properties were carefully hand-picked by the client, and how technology powered
+            the process. </p>
+        </section>
+
+        <section>
+          <h3>Here’s the final result</h3>
+          <picture>
+            <source srcset="img/roofs/rs-final-1@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-final-1@2.png" alt="Final design 1">
+          </picture>
+          <picture>
+            <source srcset="img/roofs/rs-final-2@1.png" media="(max-width:767px)">
+            <img src="img/roofs/rs-final-2@2.png" alt="Final design 2">
+          </picture>
+
+          <p>As a result, we hit the successful metrics because all the properties listed during the first launch were all sold out in no time! </p>
+        </section>
+
+      </div>
+    </div><!-- project detail ends -->
 
   </main>
 
