Change copy details

--- a/project-1.html
+++ b/project-1.html
@@ -153,7 +153,7 @@
             <img src="img/roofs/rs-ia@2.png" alt="information architecture">
           </picture>
 
-          <p>At the same time, more marketing messages were brought to the table as part of the design decision: </p>
+          <h4>At the same time, more marketing messages were brought to the table as part of the design decision: </h4>
           <ul>
             <li>The first group of investors was exclusively invited. </li>
             <li>The service was powered by AI to generate predictive data analysis. </li>
@@ -206,7 +206,7 @@
             <img src="img/roofs/rs-final-2@2.png" alt="Final design 2">
           </picture>
 
-          <p>As a result, we hit the successful metrics because all the properties listed during the first launch were all sold out in no time! </p>
+          <p>As a result, we hit the successful metrics because all the properties listed during the first launch were all sold out in a few weeks. </p>
         </section>
 
       </div>
