Close open tags

--- a/project-1.html
+++ b/project-1.html
@@ -78,6 +78,7 @@
                 <li>Build trust between the investors and the platform through a responsive website</li>
                 <li>Work with existing brand DNA and create a new style guide for the targeted visitors</li>
               </ul>
+              </div>
           </section>
 
         </div>
