Update links to project-1.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div>
             <!-- column 1 starts -->
             <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
-            <a href="case1">
+            <a href="project-1.html">
               <picture>
                 <source srcset="img/home/hompage-case-1@1.png" media="(max-width:767px)">
                 <img src="img/home/homepage-case-1@2.png" alt="Launch a new investment product">
@@ -79,7 +79,7 @@
             <h3>Launch a New Investment Product</h3>
             <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
             </p>
-            <a href="case1">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
+            <a href="project-1.html">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
           </div>
 
         </section> <!-- case 1 ends -->
