--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
   <meta charset="utf-8">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
