Add CSS link to file and font

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <!-- normalize the style first before customizing style -->
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- Q: should the stylesheet link to be added before or after meta data? -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
   <meta name="author" content="YunwenTu">
