--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  
   <meta charset="utf-8">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
