Update heading typography

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Q: should the stylesheet link to be added before or after meta data? -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
       <div>
         <h1>Hi! I’m Tutu.
           <br>
-          <span style="font-size:18pt">I am a <span style="color:#c34e1e">UX/UI</span> and a <span style="color:#c34e1e">food</span> designer.
+          <span style="font-size:24pt">I am a  <a href="#projects" ><span style="color:#c34e1e">UX/UI</span></a> and a <span style="color:#c34e1e">food</span> designer.
             As one of the co-founder at <a href="https://www.the-six.co/" target="_blank"><span style="color:#c34e1e">The Six</span></a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
             empowers me to
             learn
@@ -49,9 +49,9 @@
       </div>
 
       <div>
-        <p>LOCATION</p>
+        <h5>LOCATION</h5>
         <p>San Francisco Bay Area</p>
-        <p>EMAIL</p>
+        <h5>EMAIL</h5>
         <p>yunwentu22@gmail.com</p>
       </div>
 
