Add style for hyperlinks

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
