--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
@@ -82,7 +83,7 @@
                 <li>Build trust between the investors and the platform through a responsive website</li>
                 <li>Work with existing brand DNA and create a new style guide for the targeted visitors</li>
               </ul>
-              </div>
+            </div>
           </section>
 
         </div>
