--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
+
   <title>YunwenTu(Tutu) Design Explorer</title>
   <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
   <!-- may change the favicon design later -->
@@ -40,11 +42,9 @@
       <div>
         <h1>Hi! I’m Tutu.
           <br>
-          <span style="font-size:24pt">I am a  <a href="#projects" ><span style="color:#c34e1e">UX/UI</span></a> and a <span style="color:#c34e1e">food</span> designer.
-            As one of the co-founder at <a href="https://www.the-six.co/" target="_blank"><span style="color:#c34e1e">The Six</span></a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
-            empowers me to
-            learn
-            about people & technology and to shape a more preferable future.</span>
+          <span style="font-size:24pt">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
+            As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
+            empowers me to learn about people & technology and to shape a more preferable future.</span>
         </h1>
       </div>
 
