Add button styles to css

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h3>Launch a New Investment Product</h3>
             <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
             </p>
-            <a href="design-a-new-investment-product.html">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
+            <a href="design-a-new-investment-product.html" class="button">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
           </div>
 
         </section> <!-- case 1 ends -->
@@ -106,7 +106,7 @@
             <!-- Column 2 starts -->
             <h3>IT Service Management Design</h3>
             <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
-            <a href="case2">Learn more</a> <!-- individual project button -->
+            <a href="case2" class="button">Learn more</a> <!-- individual project button -->
           </div>
 
         </section> <!-- case 2 ends -->
@@ -122,7 +122,7 @@
       <!-- the footer content wrapper -->
       <h2> I have more to share </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
-      <div><a href="mailto:yunwentu22@gmail.com"> yunwentu22@gmail.com </a></div>
+      <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
       <div>
         <ul>
