Update font style and img size

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </div>
 
       <div>
-        <h5>LOCATION</h5>
+        <p class="mini-title">LOCATION</p>
         <p>San Francisco Bay Area</p>
-        <h5>EMAIL</h5>
+        <p class="mini-title">EMAIL</p>
         <p>yunwentu22@gmail.com</p>
       </div>
 
