Update the overview format

--- a/project-1.html
+++ b/project-1.html
@@ -53,22 +53,23 @@
         <div>
           <section>
             <div>
-              Design Duration: 3.5 months (2018)
+              <p class="mini-title">Design Duration</p>
+              <p>3.5 months (2018)</p>
             </div>
             <div>
-              <h3>Client Industry</h3>
+              <p class="mini-title">Client Industry</p>
               <p>Proptech, Fintech</p>
             </div>
             <div>
-              <h3>User</h3>
+              <p class="mini-title">User</p>
               <p>Accredited Investors</p>
             </div>
             <div>
-              <h3>Role</h3>
+              <p class="mini-title">Role</p>
               <p>Product designer (* Collaborated with a team in user research and another designer in the web design process)</p>
             </div>
             <div>
-              <h3>Services</h3>
+              <p class="mini-title">Services</p>
               <p>User research, responsive web design, UX testing, marketing assets & document design </p>
             </div>
           </section>
