Update format of project overview

--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -58,13 +58,26 @@
 
         <div>
           <section>
-            <ul>
-              <li> Design Duration: 3.5 months (2018)</li>
-              <li> Client Industry: Proptech, Fintech</li>
-              <li> User: Accredited Investors</li>
-              <li> Role: Product designer in Web UX and UI design (* Collaborated with a team in user research and another designer in the web design process)</li>
-              <li> Services: User research, responsive web design, UX testing, marketing assets & document design </li>
-            </ul>
+            <div>
+              <p class="mini-title">Design Duration</p>
+              <p>3.5 months (2018)</p>
+            </div>
+            <div>
+              <p class="mini-title">Client Industry</p>
+              <p>Proptech, Fintech</p>
+            </div>
+            <div>
+              <p class="mini-title">User</p>
+              <p>Accredited Investors</p>
+            </div>
+            <div>
+              <p class="mini-title">Role</p>
+              <p>Product designer (* Collaborated with a team in user research and another designer in the web design process)</p>
+            </div>
+            <div>
+              <p class="mini-title">Services</p>
+              <p>User research, responsive web design, UX testing, marketing assets & document design </p>
+            </div>
           </section>
 
           <section>
