Apply button style to link

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
               Sciences, Chinese Culture Center (San Francisco) and etc.</p>
 
-            <a href="files/YunwenTu_CV.pdf" download target="_blank"> Resume </a>
+            <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
 
           </section> <!-- my intro ends -->
 
