Add section IDs

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Header and navigation -->
-  <header>
+  <header id="top">
     <div>
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main id="top">
+  <main id="about-me">
     <div>
       <div>
         <!-- Q: if I am going to hide the title "About" in the future, do I need to update the <h2> to <h1>? -->
@@ -49,7 +49,7 @@
         </picture>
 
         <div>
-          <section>
+          <section id="intro-details">
             <!-- column 1 my intro starts -->
             <h2>Design Explorer</h2>
 
@@ -69,7 +69,7 @@
           </section> <!-- my intro ends -->
 
 
-          <section>
+          <section id="skills">
             <!-- column 2: skills starts -->
 
             <h2>Skills & Tools</h2>
