--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Header and navigation -->
-  <header>
+  <header id="top">
     <div>
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <main id="top">
+  <main id="hero">
     <!-- Hero section: my intro -->
     <div>
 
