--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
 
   <!-- Header and navigation -->
-  <header>
+  <header id="top">
     <div>
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <main id="top">
+  <main id="contact-form">
 
     <div>
       <div>
