--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Header and navigation -->
-  <header>
+  <header id="top">
     <div>
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
@@ -33,7 +33,7 @@
     </div>
   </header>
 
-  <main id="top">
+  <main id="project-title">
 
     <div>
       <picture>
@@ -50,7 +50,7 @@
 
     <div>
       <!-- overview starts -->
-      <div>
+      <div id="overview">
 
         <div>
           <h2>Overview</h2>
@@ -106,7 +106,7 @@
 
     <div>
       <!-- project detail starts -->
-      <div>
+      <div id="details">
         <h2> The Moments</h2>
 
         <section>
