Hide heading 1 on about page

--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@
   <main id="about-me">
     <div>
       <div>
-        <!-- Q: if I am going to hide the title "About" in the future, do I need to update the <h2> to <h1>? -->
-        <h1> About </h1>
+        <h1 class="hidden"> About </h1>
       </div>
     </div>
 
