Add .container to key <div>

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
   <!-- Header and navigation -->
   <header id="top">
-    <div>
+    <div class="container">
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
         <ul>
@@ -33,7 +33,7 @@
   </header>
 
   <main id="about-me">
-    <div>
+    <div class="container">
       <div>
         <h1 class="hidden"> About </h1>
       </div>
@@ -114,7 +114,7 @@
 
   <!-- Footer -->
   <footer id="contact">
-    <div>
+    <div class="container">
       <!-- the footer content wrapper -->
       <h2> I have more to share </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
