--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -20,7 +20,7 @@
 
   <!-- Header and navigation -->
   <header id="top">
-    <div>
+    <div class="container">
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
         <ul>
@@ -35,7 +35,7 @@
 
   <main id="project-title">
 
-    <div>
+    <div class="container">
       <picture>
         <source srcset="img/roofs/rs-1@1.png" media="(max-width:767px)">
         <img src="img/roofs/rs-1@2.png" alt="new-investment-product">
@@ -235,7 +235,7 @@
 
   <!-- Footer -->
   <footer id="contact">
-    <div>
+    <div class="container">
       <!-- the footer content wrapper -->
       <h2> I have more to share </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
