--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Header and navigation -->
   <header id="top">
-    <div>
+    <div class="container">
       <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
       <nav>
         <ul>
@@ -37,7 +37,7 @@
 
   <main id="hero">
     <!-- Hero section: my intro -->
-    <div>
+    <div class="container">
 
       <div>
         <h1>Hi! I’m Tutu.
@@ -118,7 +118,7 @@
 
   <!-- Footer -->
   <footer id="contact">
-    <div>
+    <div class="container">
       <!-- the footer content wrapper -->
       <h2> I have more to share </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
