Add .row to css

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     <!-- Projects -->
     <div>
       <!-- projects section -->
-      <div id="projects">
+      <div class="container" id="projects">
         <!-- projects content wrapper -->
 
         <h2>UX/UI Work</h2>
 
         <!-- Case 1 -->
-        <section>
+        <section class="row">
 
           <div>
             <!-- column 1 starts -->
@@ -90,7 +90,7 @@
         </section> <!-- case 1 ends -->
 
         <!-- Case 2 -->
-        <section>
+        <section class="row">
 
           <div>
             <!-- column 1 starts -->
