Add css layout styling

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <!-- Header and navigation -->
   <header id="top">
     <div class="container">
-      <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
+      <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
           <li><a href="index.html#projects">Projects</a></li>
