--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Header and navigation -->
   <header id="top">
     <div class="container">
-      <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
+      <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
           <li><a href="index.html#projects" target="_self">Projects</a></li>
@@ -42,13 +42,13 @@
       <div>
         <h1>Hi! I’m Tutu.
           <br>
-          <span style="font-size:24pt">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
+          <span style="font-size:20pt">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
             As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
             empowers me to learn about people & technology and to shape a more preferable future.</span>
         </h1>
       </div>
 
-      <div>
+      <div id="hero-contact">
         <p class="mini-title">LOCATION</p>
         <p>San Francisco Bay Area</p>
         <p class="mini-title">EMAIL</p>
