--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -21,7 +21,7 @@
   <!-- Header and navigation -->
   <header id="top">
     <div class="container">
-      <a href="index.html"><img src="img/home/Logo-142x100.png" alt="Tutu Logo" width="70"></a>
+      <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
           <li><a href="index.html#projects" target="_self">Projects</a></li>
