--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -239,9 +239,9 @@
       <!-- the footer content wrapper -->
       <h2> I have more to share </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
-      <div><a href="mailto:yunwentu22@gmail.com"> yunwentu22@gmail.com </a></div>
+      <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
-      <div>
+      <div id="ssn">
         <ul>
           <!-- Note: I am aware of the course suggests us to use svg icons here. I use the png format because I don't know how to export the drawing into svg files in that sketching tool. -->
           <li> <a href="https://www.linkedin.com/in/tuyunwen/" target="_blank"><img src="img/icons/linkedin.png" alt="LinkedIn icon" width="32"></a></li>
@@ -254,7 +254,6 @@
       <div><a href="#top">Back to the top</a></div>
 
       <p>COPYRIGHT YUNWEN TU 2020.</p>
-
 
     </div><!-- footer wrapper ends -->
   </footer>
