--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
-      <div>
+      <div id="ssn">
         <ul>
           <!-- Note: I am aware of the course suggests us to use svg icons here. I use the png format because I don't know how to export the drawing into svg files in that sketching tool. -->
           <li> <a href="https://www.linkedin.com/in/tuyunwen/" target="_blank"><img src="img/icons/linkedin.png" alt="LinkedIn icon" width="32"></a></li>
