Update color and copy

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <main id="about-me">
     <div class="container">
       <div>
-        <h1 class="hidden"> About </h1>
+        <h1> Who is Tutu </h1>
       </div>
     </div>
 
@@ -50,7 +50,7 @@
         <div>
           <section id="intro-details">
             <!-- column 1 my intro starts -->
-            <h2>Design Explorer</h2>
+            <h2 class="hidden">Design Explorer</h2>
 
             <p>My name is Yunwen Tu, and all my friends go by Tutu :)</p>
             <p>I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As one of the
